--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,3 @@
-@import "~antd/dist/antd.css";
-
 :root {
   --white: #fff;
   --blue: #0081a7;
@@ -10,7 +8,7 @@
 }
 
 body {
-  min-height: 100vh;
+  height: 100vh;
   background: var(--gray);
   margin: 0;
   padding: 0;
